tests/ui/typeck/bad_operand_bool_add.rx
//@ spec: RXS-0043, RXS-0047
fn f(p: bool, q: bool) -> bool {
    p + q //~ ERROR RX2006
}
